WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225261
[Metal ANGLE]: Fix conversions tests and remove failing test expectations
https://bugs.webkit.org/show_bug.cgi?id=225261
Summary
[Metal ANGLE]: Fix conversions tests and remove failing test expectations
Kyle Piddington
Reported
2021-04-30 17:41:05 PDT
[Metal ANGLE]: Fix conversions tests and remove failing test expectations
Attachments
Patch
(132.16 KB, patch)
2021-04-30 17:43 PDT
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kyle Piddington
Comment 1
2021-04-30 17:43:53 PDT
Created
attachment 427472
[details]
Patch
Kyle Piddington
Comment 2
2021-04-30 17:43:55 PDT
<
rdar://problem/77349615
>
EWS Watchlist
Comment 3
2021-04-30 17:44:51 PDT
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
EWS
Comment 4
2021-05-03 10:13:23 PDT
Committed
r276905
(
237250@main
): <
https://commits.webkit.org/237250@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427472
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug