[Metal ANGLE]: Fix conversions tests and remove failing test expectations https://bugs.webkit.org/show_bug.cgi?id=225261 <rdar://77349615>

bool conversion workaround was being applied to all shaders. Correct shader translation to generate
better conversion code on platforms that don't need a workaround.

Conversions for basic types like vec2, ivec2, uvec2 were only using the first components when workaround
was active. Correct swizzle logic to get all components when doing a conversion.

Reviewed by Dean Jackson.

Source/ThirdParty/ANGLE:

* src/compiler/translator/TranslatorMetalDirect/AddExplicitTypeCasts.cpp:
* src/compiler/translator/TranslatorMetalDirect/AstHelpers.cpp:
(sh::CoerceSimple):
* src/compiler/translator/TranslatorMetalDirect/AstHelpers.h:

LayoutTests:

* webgl/2.0.0/deqp/data/gles2/shaders/conversions-expected.txt:
* webgl/2.0.0/deqp/data/gles3/shaders/conversions-expected.txt:


Canonical link: https://commits.webkit.org/237250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276905 268f45cc-cd09-0410-ab3c-d52691b4dbfc